connect lance db and created database

--- a/notebooks/explore_data_and_ingest.ipynb
+++ b/notebooks/explore_data_and_ingest.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cb23edd9",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fbab5d10",
    "metadata": {},
    "outputs": [
@@ -64,6 +64,70 @@
     "    print(text[:500])\n",
     "else:\n",
     "    print(\"Inga .md-filer hittades i mappen data/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1dcc891",
+   "metadata": {},
+   "source": [
+    "### Connecta till lanceDB och skapa tabell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b223063f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VECTOR_DB_PATH: c:\\Users\\milou\\Documents\\Git\\rag-lab-milou-de24\\lancedb\n",
+      "Skapade ny tabell 'articles'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import lancedb\n",
+    "from backend.constants import VECTOR_DB_PATH\n",
+    "from backend.data_models import Article\n",
+    "# visar var tabellen skapas\n",
+    "print(\"VECTOR_DB_PATH:\", VECTOR_DB_PATH)\n",
+    "\n",
+    "db = lancedb.connect(str(VECTOR_DB_PATH))\n",
+    "# skapar articels - eller öppnar den om den redan existerar\n",
+    "if \"articles\" in db.table_names():\n",
+    "    table = db.open_table(\"articles\")\n",
+    "    print(\"Öppnade befintlig tabell 'articles'\")\n",
+    "else:\n",
+    "    table = db.create_table(\"articles\", schema=Article)\n",
+    "    print(\"Skapade ny tabell 'articles'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "610af949",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BASE_DIR: c:\\Users\\milou\\Documents\\Git\\rag-lab-milou-de24\n",
+      "VECTOR_DB_PATH: c:\\Users\\milou\\Documents\\Git\\rag-lab-milou-de24\\lancedb\n",
+      "VECTOR_DB_PATH (absolut): C:\\Users\\milou\\Documents\\Git\\rag-lab-milou-de24\\lancedb\n"
+     ]
+    }
+   ],
+   "source": [
+    "from backend.constants import BASE_DIR, VECTOR_DB_PATH\n",
+    "\n",
+    "print(\"BASE_DIR:\", BASE_DIR)\n",
+    "print(\"VECTOR_DB_PATH:\", VECTOR_DB_PATH)\n",
+    "print(\"VECTOR_DB_PATH (absolut):\", VECTOR_DB_PATH.resolve())"
    ]
   }
  ],
