Implement RAG agent with LanceDB tool and refined system prompt. Corrected lancedb_dir in constants

--- a/notebooks/explore_data_and_ingest.ipynb
+++ b/notebooks/explore_data_and_ingest.ipynb
@@ -302,6 +302,42 @@
     "print()\n",
     "print(results[0][\"content\"][:500]) # printar dom första 500-tecknen"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c542bec",
+   "metadata": {},
+   "source": [
+    "- testar ragresponse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f369a16e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RagResponse(file_name='An introduction to the vector database LanceDB.md', answer='This is a test answer.')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from backend.data_models import RagResponse\n",
+    "\n",
+    "test = RagResponse(\n",
+    "    file_name=\"An introduction to the vector database LanceDB.md\",\n",
+    "    file_path=\"/some/path/An introduction to the vector database LanceDB.md\",\n",
+    "    answer=\"This is a test answer.\"\n",
+    ")\n",
+    "test"
+   ]
   }
  ],
  "metadata": {
